add download functionality

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <button id="play">play</button>
 <button id="pause">pause</button>
 <button id="stop">stop</button>
+<button id="download">download</button>
+<audio controls></audio>
 <script src="bundle.js"></script>
-
 </body>
 </html>
