new browserify way to include import/export functionalities

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <button id="stop">stop</button>
 <button id="download">download</button>
 <audio controls></audio>
-<script src="bundle.js"></script>
+<script src="bundle.js" type="module"></script>
+<script src="test.js" type="module"></script>
 </body>
 </html>
